[package]
name = "nc"
authors = ["icekylin <icekylinvpn@gmail.com>"]
description = "arbitrary TCP and UDP connections and listens"
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/ice-kylin/netcat"
repository = "https://github.com/ice-kylin/netcat"
keywords = ["cli", "tcp", "udp", "nc", "net"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
exitcode = "1.1.2"
human-panic = "1.2.0"
tokio = { version = "1", features = ["full"] }
url = "2.4"

[build-dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_mangen = "0.2"
url = "2.4"
