[package]
name = "rnc"
authors = ["icekylin <icekylinvpn@gmail.com>"]
description = "arbitrary TCP and UDP connections and listens"
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/ice-kylin/netcat"
repository = "https://github.com/ice-kylin/netcat"
keywords = ["cli", "tcp", "udp", "nc", "net"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
env_logger = "0.10.0"
exitcode = "1.1.2"
human-panic = "1.2.0"
log = "0.4.20"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.8"
url = "2.4"

[build-dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_mangen = "0.2"
clap-verbosity-flag = "2.0.1"
url = "2.4"
